tests/NormalTests/paczka1/fuzzy1/32053738.err
Error in line 8: MrLVOS3jjsg A379 -2,8
Error in line 5: MrLVOS3jjsg A379 40,9
Error in line 18: y8TYO4d A508 68,7
Error in line 26: 41jTjDC A508 -1,8
Error in line 1: 1Ay5qeS A217 24,3
Error in line 31: eDDdRc A730 97,2
